// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-classname-to-data-test defaults to transform test-* classnames to data-test attrbutes 1`] = `
import React from 'react';

const ButtonGroup = ({ editItem }) => (
  <div>
    <button data-test="add-btn">Add</button>
    <button className="btn btn-secondary" onClick={editItem} data-test="edit-btn">
      Edit
    </button>
    <button className="btn btn-danger" data-test="delete-btn">
      Delete
    </button>
  </div>
);

export default ButtonGroup;

`;

exports[`test-classname-to-data-test does not transform classes wrapped in template literal (yet) 1`] = `
import React from 'react';

const Form = () => (
  <div>
    <div className="untested-components">
      <input className={\`text-input disabled\`} />
      <input className={\`text-input \${active ? 'active' : 'inactive'}\`} />
    </div>
    <div className="tested-components">
      <input data-test="template-input" />
      <button className={\`btn \${disabled && 'disabled'}\`} data-test="template-btn">
        Test classNames parsing
      </button>
    </div>
  </div>
);

export default ButtonGroup;

`;

exports[`test-classname-to-data-test takes class-name-prefix config option 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`test-classname-to-data-test takes dataKey config option 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  import React from 'react';
  
  const ButtonGroup = ({ editItem }) => (
    <div>
-     <button data-test="add-btn">Add</button>
-     <button className="btn btn-secondary" onClick={editItem} data-test="edit-btn">
+     <button data-cypress="add-btn">Add</button>
+     <button className="btn btn-secondary" onClick={editItem} data-cypress="edit-btn">
        Edit
      </button>
      <button className="btn btn-danger" data-test="delete-btn">
        Delete
      </button>
`;

exports[`test-classname-to-data-test transforms classes wrapped in classNames/cx 1`] = `
import React from 'react';
import classNames from 'classnames';

const cx = classNames.bind({ active: 'btn-active' });

const Form = () => (
  <div>
    <div className="untested-components">
      <input className={classNames('text-input', { disabled: true })} />
      <input className={cx('text-input', ['active'], { disabled: true })} />
    </div>
    <div className="tested-components">
      <input data-test="classnames-input" />
      <button className={classNames({ disabled: true })} data-test="classnames-btn">
        Test classNames parsing
      </button>
      <button className={cx(['active'], { 'btn-hover': false })} data-test="cx-btn">
        Test cx parsing
      </button>
    </div>
  </div>
);

export default ButtonGroup;

`;
